--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-		"requiredBackgroundModes" : [ "audio" ],
+        "requiredBackgroundModes" : [ "audio" ],
         "appid" : "",
         "setting" : {
             "urlCheck" : false
@@ -77,5 +77,17 @@
     },
     "uniStatistics" : {
         "enable" : false
+    },
+    "h5" : {
+        "router" : {
+            "mode" : "history",
+            "base" : "./"
+        },
+        "devServer" : {
+            "https" : false
+        },
+        "sdkConfigs" : {
+            "maps" : {}
+        }
     }
 }
