--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uniapp-zaudio",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "audio manager for uniapp",
-  "main": "components/z-audio/index.js",
+  "main": "components/z-audio/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
