--- a/components/z-audio/package.json
+++ b/components/z-audio/package.json
@@ -1,9 +1,14 @@
 {
   "name": "uniapp-zaudio",
-  "version": "2.1.2",
+  "version": "2.2.0",
   "description": "audio manager for uniapp",
-  "main": "components/z-audio/index.ts",
-  "types": "components/z-audio/types.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
+  "files": [
+    "static",
+    "dist/index.js",
+    "dist/index.d.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
