修复续播问题,修复异步加载问题

--- a/components/uniapp-zaudio/package.json
+++ b/components/uniapp-zaudio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uniapp-zaudio",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "audio manager for uniapp",
   "main": "index.js",
   "types": "dist/ZAudio.d.js",
@@ -10,7 +10,8 @@
     "index.js",
     "index.scss",
     "zaudio.vue",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc"
